# VSCode-Delphi-Extension

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  rsm-format.txt  todo.txt
docs/: 01-architecture.md  02-rsm-format-notes.md  03-dwarf-emission-notes.md  04-validation-plan.md  05-vscode-extension.md  06-gotchas.md
examples/: README.md
examples/01_hello/: build.cmd  hello.dpr  hello.dproj
examples/02_two_units/: App.Colors.pas  Geometry.pas  build.cmd  two_units.dpr  two_units.dproj
examples/03_primitives/: build.cmd  primitives.dpr  primitives.dproj
examples/04_locals/: build.cmd  locals.dpr  locals.dproj
examples/05_types/: build.cmd  types.dpr  types.dproj
examples/06_interface/: build.cmd  iface.dpr  iface.dproj
examples/07_records/: build.cmd  records.dpr  records.dproj
examples/08_inherit_props/: build.cmd  inherit_props.dpr  inherit_props.dproj
examples/09_cross_unit/: Extra.pas  Items.pas  Layout.pas  Shapes.pas  build.cmd  cross_unit.dpr  cross_unit.dproj
examples/99_cpp_baseline/: main.cpp  main.natvis
scripts/: b.sh  be.sh  delphi-debug.ps1  install-deps.ps1  smoke.sh  t.sh
spike/: README.md  hello.c  inject_dwarf.c  inject_files.c
src/: CMakeLists.txt  main.cpp
src/cli/: cli.h  cli_cmd_analyze_procs.cpp  cli_cmd_diff_procs.cpp  cli_cmd_dump.cpp  cli_cmd_dwarf.cpp  cli_cmd_dwarf_emit.cpp  cli_cmd_pdb.cpp  cli_cmd_pdb_aggregates.cpp  cli_cmd_pdb_internal.h  cli_cmd_pdb_modules.cpp  cli_cmd_pdb_thunks.cpp  cli_cmd_probe_procs.cpp  cli_usage.cpp  source_path.h  util.h
src/compose/: frame.cpp  frame.h
src/dwarf/: dwarf_emitter.cpp  dwarf_emitter.h  dwarf_internal.h  dwarf_sections.cpp
src/map/: map_reader.cpp  map_reader.h
src/model/: model.cpp  model.h
src/natvis/: natvis_writer.cpp  natvis_writer.h
src/pdb/: pdb_writer.cpp  pdb_writer.h  pdb_writer_internal.h  pdb_writer_modules.cpp  pdb_writer_symbols.cpp  pdb_writer_types.cpp
src/pe/: pe_injector.cpp  pe_injector.h  pe_pdb_injector.cpp  pe_pdb_injector.h  prologue.h  size_sniffer.h  thunk_scanner.h
src/rsm/: rsm_aggregates.cpp  rsm_decorate.cpp  rsm_dump.cpp  rsm_internal.h  rsm_primitives.cpp  rsm_procs_vars.cpp  rsm_reader.cpp  rsm_reader.h  rsm_unit_tables.cpp
test/: CMakeLists.txt
test/fixtures/: README.md  hello.map  hello.rsm  primitives.map  primitives.rsm  records.map  records.rsm  two_units.map  two_units.rsm
test/unit/: test_compose.cpp  test_dwarf_emitter.cpp  test_map_reader.cpp  test_map_reader_fixtures.cpp  test_model.cpp  test_pdb_writer.cpp  test_pe_pdb_injector.cpp  test_prologue.cpp  test_rsm_reader.cpp  test_size_sniffer.cpp
vscode-ext/: .vscodeignore  README.md  package-lock.json  package.json
vscode-ext/src/: buildRunner.ts  dprojParser.ts  extension.ts  upToDateCheck.ts
